core.css
body {
    font-family: "Source Sans Pro", sans-serif;
    color: #d8d8d8;
    font-size: 30px;
    background-image: url("tile.png");
    overflow-x: hidden;
}

body,
html {
    overflow-x: hidden;
}

.div-center {
    margin: 0;
    position: absolute;
    top: 30%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.div-center-title,
.div-center-links {
    text-align: left;
}

.div-center-links-container {
    display: flex;
    margin: auto;
    position: absolute;
}

.div-center-links {
    display: flex;
    flex-direction: column;
    width: fit-content;
}

.header {
    font-weight: 300;
    font-size: 80px;
}

a,
button {
    font-family: "Source Sans Pro", sans-serif;
    background: none;
    border: none;
    font-size: 38px;
    text-decoration: none;
    color: darkorange;
    cursor: pointer;
    padding: 0;
    text-align: left;
    width: max-content;
    transition: 0.4s;
}

a:hover,
button:hover,
.underline {
    text-decoration: underline;
}

.sub {
    font-size: 32px;
    padding-left: 32px;
}

.textarea-reachout {
    width: 100%;
    height: 150px;
    border: 2px solid #d8d8d8;
    color: #d8d8d8;
    resize: none;
    font-size: 32px;
    font-family: "Source Sans Pro", sans-serif;
    padding: 8px;
    background-color: transparent;
}

.textarea-reachout-send {
    text-align: right;
    font-size: 32px;
}

textarea:focus {
    outline: none;
}

.bottom-padding {
    margin-bottom: 30%;
}

.fa-circle-notch {
    display: block;
    font-size: 35px;
    color: darkorange;
}

.reachout {
    text-align: right;
    display: block;
    width: 80%;
}

#arrow-latest,
#arrow-reachout {
    display: none;
    height: 32px;
    width: 32px;
    color: darkorange;
}

